--- a/package.json
+++ b/package.json
@@ -38,7 +38,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb": "^19.0.4",
     "gh-pages": "^6.0.0",
     "sass": "^1.69.4"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-react-jsx",
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
