--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -46,7 +47,10 @@
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "gh-pages": "^6.0.0",
+    "prettier": "^3.1.0",
     "sass": "^1.69.4"
   },
   "babel": {
